Fixed decimal overflow
Fixed bug where still was overflowing when dividing by a big number. Fixed so now using multiple variables, the program will always make the numbers inside the screen

--- a/styles.css
+++ b/styles.css
@@ -18,16 +18,18 @@ body {
 .screen {
     background: rgb(255, 255, 255);
     width:500px;
-    height:100px;
+    min-height:100px;
     margin-bottom: 30px;
     border: 10px solid black;
     border-radius: 25px;
     display: flex;
     justify-content: right;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .screen .text {
+    max-width: 500px;
     margin: 5px 15px 5px 15px;
     font-size: 70px;
 }
@@ -38,7 +40,7 @@ body {
     justify-content: center;
     align-items: center;
     width:500px;
-    height:600px;
+    /* height:600px; */
     background:rgb(89, 89, 160);
     padding: 40px;
     border-radius: 25px;
